add implicit user passing
